# ogl_sandbox_c

./: .gitignore  .gitmodules  README.md
cmake/: CMakeLists.txt  start.sh
src/: GLApi.h  GLInit.c  GLInit.h  GLIo.c  GLIo.h  GLScene.c  GLScene.h  GLShaders.c  GLShaders.h  GLTypedefs.h  Nullptr.h  fs.glsl  main.c  vs.glsl
vs/: ogl_c.sln  ogl_c.vcxproj  ogl_c.vcxproj.filters  ogl_sandbox_c.sln  ogl_sandbox_c.vcxproj
